--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
                 <a href="./partituras/Trompetes.pdf" download="">Trompetes</a>
             </li>
             <li>
+                <a href="./partituras/Tuba.pdf" download="">Tuba</a>
+            </li>
+            <li>
                 <a href="./partituras/Violinos.pdf" download="">Violinos</a>
             </li>
             <li>
